--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,9 +3,6 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-RUN cp /etc/apt/sources.list.d/debian.sources /etc/apt/sources.list.d/debian.sources.bak
-COPY sources_zh.sources /etc/apt/sources.list
-
 # Install system-level dependencies
 # use cache to speed up apt-get install:
 # https://stackoverflow.com/questions/66808788/docker-can-you-cache-apt-get-package-installs
@@ -24,7 +21,7 @@ RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
 COPY requirements.txt /app
 # Use cache to speed up pip install:
 # https://stackoverflow.com/questions/58018300/using-a-pip-cache-directory-in-docker-builds
-RUN --mount=type=cache,target=/root/.cache/pip pip install -r /app/requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple
+RUN --mount=type=cache,target=/root/.cache/pip pip install -r /app/requirements.txt
 
 # Install jupyter nbextensions
 RUN jupyter contrib nbextension install --user
