--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,75 +1,73 @@
+# main services
 fastapi==0.72.0
 uvicorn==0.17.0
+redis==4.5.5
 openai==0.27.8
-replicate==0.8.3
-cos-python-sdk-v5==1.9.25
-stability-sdk==0.8.1
-redis==4.5.5
-pre-commit==3.3.3
-pylint==2.17.4
-black==23.3.0
-langchain==0.0.214
-tiktoken==0.4.0
-faiss-cpu==1.7.4
-lxml==4.9.2
-python-multipart==0.0.6
-# document loader
-PyMuPDF==1.21.1
-google-cloud-translate==3.3.2
-python-decouple==3.5
-google-auth==2.3.0
+ipykernel
+notebook==6.5.6
+jupyter_server
+jupyter_contrib_nbextensions
+ipywidgets
+GitPython
 
-tiktoken==0.4.0
-docx2txt==0.8
-redis==4.5.5
-GitPython==3.1.32
-bs4
-jq
-# data analysis
-pandas==2.1.0
-# test
+# debug
+debugpy
 pytest==7.4.0
 httpx==0.19.0
-# nodes
-pymongo==3.11.0
-dnspython==2.1.0
-slack-sdk==3.11.2
-google-auth-oauthlib==0.4.6
-google-auth-httplib2==0.1.0
-google-api-python-client==2.22.0
-discordwebhook
-discord_webhook
-telegram
-python-telegram-bot
-google-search-results
-typeguard==4.1.2
-requests==2.26.0
-PyGithub==1.58
 
+# data analysis
+pandas==2.1.0
 numpy
 pandas
 matplotlib
 scipy
 seaborn
-
-GitPython
+markdown
 
 # cli
 fire==0.4.0
 rich==13.4.2
 inquirer
 
-# services
-ipykernel
-notebook
-jupyter_server
-jupyter_contrib_nbextensions
-ipywidgets
-markdown
-GitPython
-# debug
-debugpy
+# format
+pre-commit==3.3.3
+pylint==2.17.4
+black==23.3.0
 
-# trim token
+# utils
 tokentrim
 tabulate
+PyMuPDF==1.21.1
+docx2txt==0.8
+python-dotenv
+
+# nodes (please comment unused nodes based on your projects)
+langchain==0.0.214
+tiktoken==0.4.0
+# faiss-cpu==1.7.4
+lxml==4.9.2
+python-multipart==0.0.6
+tiktoken==0.4.0
+dnspython==2.1.0
+typeguard==4.1.2
+PyGithub==1.58
+bs4
+jq
+
+# nodes needed in the future
+# replicate==0.8.3
+# cos-python-sdk-v5==1.9.25
+# stability-sdk==0.8.1
+# google-cloud-translate==3.3.2
+# python-decouple==3.5
+# google-auth==2.3.0
+# google-auth-oauthlib==0.4.6
+# google-auth-httplib2==0.1.0
+# google-api-python-client==2.22.0
+# discordwebhook
+# discord_webhook
+# telegram
+# python-telegram-bot
+# google-search-results
+# slack-sdk==3.11.2
+# pymongo==3.11.0
