ver 0, bug exists

--- a/backend/src/core/assistant/threads.yaml
+++ b/backend/src/core/assistant/threads.yaml
@@ -310,3 +310,135 @@
   message_history: []
   metadata: {}
   object: thread
+- assistant_id: null
+  created_at: 1699814835
+  id: 8848fdf0-09be-4efa-96b4-221f3641b6f9
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699814835
+  id: 868a240a-7f36-47cb-b46b-545c46539872
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699814956
+  id: 9f1fcfb3-3ba7-4777-b86d-4300432cbca8
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699814956
+  id: bb0b902e-9c76-4490-92ea-23fe1a6eacef
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815020
+  id: 83c25050-bca2-4897-9f38-e4d5af9a7465
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815021
+  id: 44808f24-83d3-4d30-bbda-a9d792d12ae0
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815067
+  id: 0d02a477-6f81-4d9e-b1c5-8d7bcda07bac
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815067
+  id: 4daa4f3f-b968-47fd-958d-0b0ffc26595a
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815098
+  id: 1d3564e3-2d43-47c7-9807-69a9b757bead
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815098
+  id: 0d21ae18-43f9-497f-b1c6-e23061c20551
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815187
+  id: f961eab2-f969-4be0-ae01-4eee8444c481
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815187
+  id: e3c3869a-5197-4a30-a8c7-fb8a3b51c034
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815359
+  id: 798e7c18-30cb-4aaa-9c5d-0f1f23d4f549
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815359
+  id: 01419177-25cc-4929-b73b-940faa1f0d7d
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815381
+  id: 7d3e0a9c-ffcb-4a1a-8aeb-5b32ae23cb8a
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815381
+  id: b105d9e8-b1c6-464d-830d-91a256ca4c4b
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815519
+  id: 7ce3ab68-7166-46ea-b8e8-f74f09cbc168
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815519
+  id: 7eb968b4-5fd3-44c2-ab77-02ba4efdcfb9
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815597
+  id: 3e91f3a3-2fcf-41fd-bc0a-585156994421
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815598
+  id: e0969718-7e60-42a6-8862-84b217db03bd
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815928
+  id: 7e4ca1a9-f220-4ed2-92ec-d4e4f0fd50f1
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1699815928
+  id: f09c4c98-4cc6-4d5b-af9a-c9b1483cc160
+  message_history: []
+  metadata: {}
+  object: thread
