--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@
 fastapi==0.72.0
 uvicorn==0.17.0
 redis==4.5.5
-openai==0.27.8
+openai==1.2.3
 ipykernel
 notebook==6.5.6
 jupyter_server
@@ -13,7 +13,7 @@ GitPython
 # debug
 debugpy
 pytest==7.4.0
-httpx==0.19.0
+httpx
 
 # data analysis
 pandas==2.1.0
