--- a/backend/src/core/assistant/tools/tools.yaml
+++ b/backend/src/core/assistant/tools/tools.yaml
@@ -21,3 +21,9 @@ tools:
           result:
             type: string
             description: the result of the code run
+  example_stateful_tool:
+    name: example_stateful_tool
+    entity_name: example_stateful_tool
+    summary: This tool is an example of a stateful tool. It will get two number from user input and return the sum of the two numbers.
+    parameters: []
+    responses: {}  
