--- a/backend/src/core/assistant/tools/swe_tool.yaml
+++ b/backend/src/core/assistant/tools/swe_tool.yaml
@@ -43,6 +43,11 @@ all_stages:
           parameter_schema:
             type: number
             description: "The action of the operation, the number 0 means add, 1 means delete, 2 means modify, and 3 means skip."
+        - name: plan_idx 
+          required: true
+          parameter_schema:
+            type: number
+            description: "The plan of the operation you want to delete or modify is which one, using the number 0 for the first one, 1 for the second one, and so on."
         - name: focus_file_name 
           required: false
           parameter_schema:
@@ -63,6 +68,27 @@ all_stages:
     need_llm_generate_response: false
   stage_5:
     name: "stage_5"
+    next_stage_entry: 
+      stage_6: 
+        - name: action 
+          required: true
+          parameter_schema:
+            type: number
+            description: "The action of the operation, the number 0 means apply, 1 means not apply, 2 means revise."
+        - name: action_idx 
+          required: true
+          parameter_schema:
+            type: number
+            description: "Which action you want to manipulate, using the number 0 for the first action, 1 for the second action, and so on."
+        - name: revise_comments 
+          required: false
+          parameter_schema:
+            type: string
+            description: "If you want to revise then what does that correspond to?"
+    need_llm_generate_parameters: false
+    need_llm_generate_response: false
+  stage_6:
+    name: "stage_6"
     next_stage_entry: 
       finish: []
     need_llm_generate_parameters: false
