--- a/backend/src/tests/core/assistant/tools.yaml
+++ b/backend/src/tests/core/assistant/tools.yaml
@@ -4,9 +4,9 @@ info:
   description: yorg tool define document.
   version: 'v1'
 tools:
-  code_interpreter:
-    name: code_interpreter
-    entity_name: code_interpreter
+  code_test:
+    name: code_test
+    entity_name: code_test
     summary: Run the code through code_interpreter and return the result of the code run. If your query is about math, computer science, or data science, you can use this tool to get the result of the code run.
     parameters:
       - name: code
