--- a/backend/.env
+++ b/backend/.env
@@ -25,8 +25,8 @@ SPEECH_REGION=
 SLACK_USER_TOKEN=
 SLACK_BOT_TOKEN=
 # environment of openai chat
-OPENAI_CHAT_API_KEY=
-OPENAI_CHAT_API_BASE=
+OPENAI_CHAT_API_KEY=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
+OPENAI_CHAT_API_BASE=https://api.openai.com/v1
 
 GOOGLE_APPLICATION_CREDENTIALS=
 DEEPL_API_KEY=
@@ -36,7 +36,7 @@ MONGODB_URI=
 # environment of serp
 SERP_API_KEY=
 # environment of vectore store
-OPENAI_EMBEDDINGS_API_KEY=
+OPENAI_EMBEDDINGS_API_KEY=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
 # environment of github
 GITHUB_PERSONAL_ACCESS_TOKEN=
 GOOGLE_APPLICATION_CREDENTIALS=
