--- a/backend/src/core/assistant/threads.yaml
+++ b/backend/src/core/assistant/threads.yaml
@@ -472,3 +472,87 @@
   message_history: []
   metadata: {}
   object: thread
+- assistant_id: null
+  created_at: 1701088470
+  id: 1a21eb50-69a7-4adc-a219-4856b2a3235b
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1701097682
+  id: 3b04c024-8fe8-4027-a71b-5e7746869cda
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1701098101
+  id: 10319609-3288-4ffe-857b-2f3ad1f7b2dc
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1701098308
+  id: 05471215-51a2-46e1-be82-b16b73e5c863
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1701098379
+  id: 7bb1bd84-c64e-4dde-bdbe-a5e35b9f27a5
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1701098520
+  id: fd0763e1-6993-4838-90ff-0b12475c0398
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1701098609
+  id: 16af0e02-2552-43fd-9a5e-a53bcc3125d9
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1701098659
+  id: 190b0509-260e-4042-9b45-d57ff7116460
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1701098722
+  id: e7ee77ed-d950-418e-8fda-df748ba7c9be
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1701098762
+  id: fef9ef74-b7c4-47be-bd7e-1d9f8dd877f5
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1701098872
+  id: 349d27c8-7d68-4474-ade7-8fbaca830251
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1701098889
+  id: 642984c1-06c6-4e35-b8df-369fb319d661
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1701098962
+  id: b80e4020-b3ac-44b4-925f-35c14ab1bc91
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1701099048
+  id: b8a4de54-77dc-4c94-af96-4e339e8c01b5
+  message_history: []
+  metadata: {}
+  object: thread
