--- a/backend/src/core/assistant/threads.yaml
+++ b/backend/src/core/assistant/threads.yaml
@@ -556,3 +556,99 @@
   message_history: []
   metadata: {}
   object: thread
+- assistant_id: null
+  created_at: 1702201847
+  id: 474de614-31d6-4ba2-87ef-f372fffc0213
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1702204408
+  id: 71baa5bc-2458-4a0d-8ebf-c0bdf46d6715
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1702205392
+  id: ba155566-da1d-4d92-a48d-293d7d00e33e
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1702205839
+  id: d685d998-88e0-4a44-8e6c-0544d875d419
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1702205993
+  id: 3813658b-098e-4e37-b4f6-ee31b01e185c
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1702206116
+  id: 5324e718-1e60-4fb7-b38c-164557eea841
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1702206284
+  id: 78ada845-9de6-4785-a078-48f9c8c85b4e
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1702206313
+  id: 93810bef-44dd-49c0-93d2-cc307ce310d8
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1702206383
+  id: fdbd9677-e348-4195-a2f7-c4f7fa742b94
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1702206500
+  id: be7b30e6-a1d6-4364-ab0e-75124b64a8aa
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1702206632
+  id: 4ec5b1e2-3220-442d-8cba-a4ce2cb2aae6
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1702206679
+  id: 09a67155-4d4d-4e47-b26d-fec5b09bbe53
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1702207505
+  id: bf943ba1-9723-41a8-9d2e-25714248d0fa
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1702207653
+  id: 5b1ae65e-17ca-4746-9905-81fdc06d995e
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1702207785
+  id: c913d320-d1c7-424a-ad4f-2cbf7717f514
+  message_history: []
+  metadata: {}
+  object: thread
+- assistant_id: null
+  created_at: 1702207877
+  id: 3a7fdc8f-cf31-433a-9a83-cdca907a73e9
+  message_history: []
+  metadata: {}
+  object: thread
